---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/named/invalid_target.py
---
## AST

```
Module(
    ModModule {
        range: 0..109,
        body: [
            Expr(
                ExprStmt {
                    range: 58..68,
                    value: Named(
                        NamedExpr {
                            range: 59..67,
                            target: Attribute(
                                AttributeExpr {
                                    range: 59..62,
                                    value: Name(
                                        NameExpr {
                                            range: 59..60,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    attr: Identifier {
                                        id: Name("y"),
                                        range: 61..62,
                                    },
                                    ctx: Store,
                                },
                            ),
                            value: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 66..67,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 69..80,
                    value: Named(
                        NamedExpr {
                            range: 70..79,
                            target: Subscript(
                                SubscriptExpr {
                                    range: 70..74,
                                    value: Name(
                                        NameExpr {
                                            range: 70..71,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    slice: Name(
                                        NameExpr {
                                            range: 72..73,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Store,
                                },
                            ),
                            value: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 78..79,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 81..90,
                    value: Named(
                        NamedExpr {
                            range: 82..89,
                            target: Starred(
                                StarredExpr {
                                    range: 82..84,
                                    value: Name(
                                        NameExpr {
                                            range: 83..84,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    ctx: Store,
                                },
                            ),
                            value: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 88..89,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 91..109,
                    value: Named(
                        NamedExpr {
                            range: 92..108,
                            target: List(
                                ListExpr {
                                    range: 92..98,
                                    elts: [
                                        Name(
                                            NameExpr {
                                                range: 93..94,
                                                id: Name("x"),
                                                ctx: Store,
                                            },
                                        ),
                                        Name(
                                            NameExpr {
                                                range: 96..97,
                                                id: Name("y"),
                                                ctx: Store,
                                            },
                                        ),
                                    ],
                                    ctx: Store,
                                },
                            ),
                            value: List(
                                ListExpr {
                                    range: 102..108,
                                    elts: [
                                        NumberLiteral(
                                            NumberLiteralExpr {
                                                range: 103..104,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                        NumberLiteral(
                                            NumberLiteralExpr {
                                                range: 106..107,
                                                value: Int(
                                                    2,
                                                ),
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Assignment expression target can only be an identifier
2 | 
3 | (x.y := 1)
  |  ^^^ Syntax Error: Assignment expression target must be an identifier
4 | (x[y] := 1)
5 | (*x := 1)
  |


  |
3 | (x.y := 1)
4 | (x[y] := 1)
  |  ^^^^ Syntax Error: Assignment expression target must be an identifier
5 | (*x := 1)
6 | ([x, y] := [1, 2])
  |


  |
3 | (x.y := 1)
4 | (x[y] := 1)
5 | (*x := 1)
  |  ^^ Syntax Error: Assignment expression target must be an identifier
6 | ([x, y] := [1, 2])
  |


  |
4 | (x[y] := 1)
5 | (*x := 1)
6 | ([x, y] := [1, 2])
  |  ^^^^^^ Syntax Error: Assignment expression target must be an identifier
  |
